# Invest_Store

./: .env.sample  README.md  category.json  data.json  pyproject.toml  requirements.txt
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill_category.py  fill_product.py
catalog/migrations/: 0001_initial.py  0002_alter_product_preview.py  0003_category_created_at.py  0004_remove_category_created_at.py  0005_contacts.py  0006_blog.py  0007_blog_is_published_alter_blog_slug_and_more.py  0008_alter_blog_slug.py  0009_version.py  0010_alter_version_options.py  0011_alter_version_is_active_alter_version_version_number.py  0012_rename_product_version_prod_product_vers.py  0013_alter_product_vers.py  0014_alter_version_options_remove_product_vers_and_more.py
catalog/templates/catalog/: add_product.html  base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  contacts.html  contacts_form.html  index.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templatetags/: my_tags.py
config/: settings.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_verification_code.py  0003_alter_user_is_active_alter_user_verification_code.py  0004_alter_user_verification_code.py  0005_alter_user_verification_code.py  0006_alter_user_verification_code.py  0007_alter_user_verification_code.py
users/templates/users/: email_confirm_form.html  login.html  (+2 more)
(+1 files in other folders)
