[tool.poetry]
name = "djmainproject"
version = "0.1.0"
description = ""
authors = ["ViktorDavydov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
Django = "^4.2.7"
BeautifulSoup = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
